--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <!-- 1º sección -->
         <section class="conocemas">
-            <article>
+            <article class="presentacion">
                 <h1>Hello</h1>
                 <h1 class="world"> world</h1>
                 <h1>pale blue dot.</h1>
@@ -40,9 +40,9 @@
         </section>
         <!-- 2º sección -->
         <section class="episodios">
-            <article>
+            <div class="tsec2">
                 <h1>Episodios</h1>
-            </article>
+            </div>
             <div class="p1">
                 <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" width="100%"
                     height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
@@ -65,7 +65,7 @@
             <div class="phone">
                 <img src="./imagenes/phone.png" alt="The Secret History of Women in Coding">
             </div>
-            <article>
+            <article class="artsec3">
                 <h1>De dónde venimos</h1>
                 <p>Our posturings, our imagined self-importance, the delusion that we have some privileged position in
                     the Universe, are challenged by this point of pale light.
@@ -75,9 +75,9 @@
         </section>
         <!-- 4º sección -->
         <section class="invitados">
-            <article>
+            <div class="tsec4">
                 <h1>Invitadas/os estelares</h1>
-            </article>
+            </div>
             <div class="f1">
                 <img src="./imagenes/grace-hopper.png" alt="Grace Hopper">
             </div>
@@ -101,37 +101,37 @@
         </section>
         <!-- 5º sección -->
         <section class="temas">
-            <article>
+            <div class="tsec5">
                 <h1>Algunos de nuestros temas</h1>
-            </article>
-            <figure>
+            </div>
+            <figure class="fig1">
                 <img src="./imagenes/icon1.svg" alt="Trabajo remoto">
                 <figcaption>Trabajo remoto</figcaption>
             </figure>
-            <figure>
+            <figure class="fig2">
                 <img src="./imagenes/icon2.svg" alt="Repensando la programación">
                 <figcaption>Repensando la programación</figcaption>
             </figure>
-            <figure>
+            <figure class="fig3">
                 <img src="./imagenes/icon3.svg" alt="Bases del código">
                 <figcaption>Bases del código</figcaption>
             </figure>
-            <figure>
+            <figure class="fig4">
                 <img src="./imagenes/icon4.svg" alt="Seguridad informática">
                 <figcaption>Seguridad informática</figcaption>
             </figure>
         </section>
         <!-- 6º sección -->
         <section class="novedades">
-            <article>
+            <div class="tsec6">
                 <h1>¿Querés las últimas novedades?</h1>
-            </article>
+            </div>
             <button class="masepisodios">ESCUCHÁ LOS EPISODIOS</button>
         </section>
     </main>
     <!-- Pié de pág con redes -->
     <footer>
-        <div>
+        <div class="pie">
             <p>© 2019— Hello blue pale dot</p>
         </div>
         <div class="redes">
