Estructura y diseño mobile first - General

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
             <img class="imglogo" src="./imagenes/logo.svg" alt="bluedot">
         </div>
         <nav>
+            <i class="fas fa-bars btnmenu"></i>
             <ul>
                 <li>EPISODIOS</li>
                 <li>NOSOTROS</li>
                 <li>ENTREVISTAS</li>
                 <li>TÓPICOS</li>
             </ul>
+            <i class="fas fa-times btncruz"></i>
         </nav>
     </header>
     <!-- cuerpo principal de pág. -->
@@ -30,8 +32,7 @@
         <!-- 1º sección -->
         <section class="conocemas">
             <article class="presentacion">
-                <h1>Hello</h1>
-                <h1 class="world"> world</h1>
+                <h1>Hello <span>world</span></h1>
                 <h1>pale blue dot.</h1>
                 <p>Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.
                 </p>
@@ -40,24 +41,26 @@
         </section>
         <!-- 2º sección -->
         <section class="episodios">
-            <div class="tsec2">
-                <h1>Episodios</h1>
-            </div>
-            <div class="p1">
-                <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" width="100%"
-                    height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-            <div class="p2">
-                <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" width="100%"
-                    height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-            <div class="p3">
-                <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" width="100%"
-                    height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-            <div class="p4">
-                <iframe src="https://open.spotify.com/embed-podcast/episode/5mddqHiI96V0ZMdMidn3WW" width="100%"
-                    height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <div class="contenedor">
+                <div class="tsec2">
+                    <h1>Episodios</h1>
+                </div>
+                <div class="p1">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" width="100%"
+                        height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div class="p2">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" width="100%"
+                        height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div class="p3">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" width="100%"
+                        height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div class="p4">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/5mddqHiI96V0ZMdMidn3WW" width="100%"
+                        height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
             </div>
         </section>
         <!-- 3º sección -->
@@ -68,9 +71,9 @@
             <article class="artsec3">
                 <h1>De dónde venimos</h1>
                 <p>Our posturings, our imagined self-importance, the delusion that we have some privileged position in
-                    the Universe, are challenged by this point of pale light.
-                    Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this
-                    vastness, there is no hint that help will come from elsewhere to save us from ourselves.</p>
+                    the Universe, are challenged by this point of pale light.</p>
+                <p>Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this
+                    astness, there is no hint that help will come from elsewhere to save us from ourselves.</p>
             </article>
         </section>
         <!-- 4º sección -->
