Revisión con validadores y corrección

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <img class="imglogo" src="./imagenes/logo.svg" alt="bluedot">
         </div>
         <nav>
-            <i class="fas fa-bars btnmenu"></i>
+            <i id="menu" class="fas fa-bars btnmenu"></i>
             <ul>
-                <li>EPISODIOS</li>
+                <li>EPISODIOS</li> <!--ver si hay que agregar link a secciones (no son las mimas-->
                 <li>NOSOTROS</li>
                 <li>ENTREVISTAS</li>
                 <li>TÓPICOS</li>
             </ul>
-            <i class="fas fa-times btncruz"></i>
+            
         </nav>
     </header>
     <!-- cuerpo principal de pág. -->
@@ -43,7 +43,7 @@
         <section class="episodios">
             <div class="contenedor">
                 <div class="tsec2">
-                    <h1>Episodios</h1>
+                    <h2>Episodios</h2>
                 </div>
                 <div class="p1">
                     <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" width="100%"
@@ -69,7 +69,7 @@
                 <img src="./imagenes/phone.png" alt="The Secret History of Women in Coding">
             </div>
             <article class="artsec3">
-                <h1>De dónde venimos</h1>
+                <h2>De dónde venimos</h2>
                 <p>Our posturings, our imagined self-importance, the delusion that we have some privileged position in
                     the Universe, are challenged by this point of pale light.</p>
                 <p>Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this
@@ -79,7 +79,7 @@
         <!-- 4º sección -->
         <section class="invitados">
             <div class="tsec4">
-                <h1>Invitadas/os estelares</h1>
+                <h2>Invitadas/os estelares</h2>
             </div>
             <div class="f1">
                 <img src="./imagenes/grace-hopper.png" alt="Grace Hopper">
@@ -91,11 +91,11 @@
                 <img src="./imagenes/Margaret_Hamilton.png" alt="Margaret Hamilton">
             </div>
             <div class="f4">
-                <img src="./imagenes/An E.R.A.Univac 1103 computer in the 1950s.png"
+                <img src="./imagenes/E.R.A.Univac.png"
                     alt="E.R.A.Univac 1103 computer in the 1950s">
             </div>
             <div class="f5">
-                <img src="./imagenes/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png"
+                <img src="./imagenes/Computer-operators-with-an-Eniac.png"
                     alt="Computer operators with an Eniac — the world’s first programmable general-purpose computer">
             </div>
             <div class="f6">
@@ -105,7 +105,7 @@
         <!-- 5º sección -->
         <section class="temas">
             <div class="tsec5">
-                <h1>Algunos de nuestros temas</h1>
+                <h2>Algunos de nuestros temas</h2>
             </div>
             <figure class="fig1">
                 <img src="./imagenes/icon1.svg" alt="Trabajo remoto">
@@ -127,7 +127,7 @@
         <!-- 6º sección -->
         <section class="novedades">
             <div class="tsec6">
-                <h1>¿Querés las últimas novedades?</h1>
+                <h2>¿Querés las últimas novedades?</h2>
             </div>
             <button class="masepisodios">ESCUCHÁ LOS EPISODIOS</button>
         </section>
