Estructura general css - 1º break point responsive 768

--- a/index.html
+++ b/index.html
@@ -93,22 +93,25 @@
             <div class="tsec5">
                 <h2 id="sectopicos">Algunos de nuestros temas</h2>
             </div>
-            <figure class="topicos">
-                <img src="./imagenes/icon1.svg" alt="Trabajo remoto">
-                <figcaption>Trabajo remoto</figcaption>
-            </figure>
-            <figure class="topicos">
-                <img src="./imagenes/icon2.svg" alt="Repensando la programación">
-                <figcaption>Repensando la programación</figcaption>
-            </figure>
-            <figure class="topicos">
-                <img src="./imagenes/icon3.svg" alt="Bases del código">
-                <figcaption>Bases del código</figcaption>
-            </figure>
-            <figure class="topicos">
-                <img src="./imagenes/icon4.svg" alt="Seguridad informática">
-                <figcaption>Seguridad informática</figcaption>
-            </figure>
+            <div class="cont-topicos">
+                <figure class="topicos">
+                    <img src="./imagenes/icon1.svg" alt="Trabajo remoto">
+                    <figcaption>Trabajo remoto</figcaption>
+                </figure>
+                <figure class="topicos">
+                    <img src="./imagenes/icon2.svg" alt="Repensando la programación">
+                    <figcaption>Repensando la programación</figcaption>
+                </figure>
+                <figure class="topicos">
+                    <img src="./imagenes/icon3.svg" alt="Bases del código">
+                    <figcaption>Bases del código</figcaption>
+                </figure>
+                <figure class="topicos">
+                    <img src="./imagenes/icon4.svg" alt="Seguridad informática">
+                    <figcaption>Seguridad informática</figcaption>
+                </figure>
+            </div>
+
         </section>
 
         <!-- 6º sección -->
@@ -131,6 +134,7 @@
             <i class="fab fa-instagram"></i>
             <i class="fab fa-twitter"></i>
             <i class="fab fa-facebook"></i>
+            <!--no es el mismo ícono que decargo, se pide circular y coloca cuadrado-->
             <i class="fab fa-telegram"></i>
         </div>
     </footer>
