Verificación y ajustes + agregado animaciones y estilos

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.
                 </p>
             </article>
-            <button class="masinfo">CONOCÉ MÁS</button>
+            <button class="masinfo"><a href="#secnosotros">CONOCÉ MÁS</a></button>
         </section>
 
         <!-- 2º sección -->
@@ -119,7 +119,7 @@
             <div class="tsec6">
                 <h2>¿Querés las últimas novedades?</h2>
             </div>
-            <button class="masepisodios">ESCUCHÁ LOS EPISODIOS</button>
+            <button class="masepisodios"><a href="#secepisodios">ESCUCHÁ LOS EPISODIOS</a></button>
         </section>
 
     </main>
@@ -130,12 +130,12 @@
             <p>© 2019— Hello blue pale dot</p>
         </div>
         <div class="redes">
-            <i class="fab fa-spotify"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-facebook"></i>
+            <a href="https://www.spotify.com/us/"><i class="fab fa-spotify"></i></a> 
+            <a href="https://www.instagram.com/?hl=es"><i class="fab fa-instagram"></i></a> 
+            <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+            <a href="https://es-la.facebook.com/"><i class="fab fa-facebook"></i></a>
             <!--no es el mismo ícono que decargo, se pide circular y coloca cuadrado-->
-            <i class="fab fa-telegram"></i>
+            <a href="https://telegram.org/"><i class="fab fa-telegram"></i></a>
         </div>
     </footer>
 </body>
