--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
         <!-- 1º sección -->
         <section class="conocemas">
             <article class="presentacion">
-                <h1>Hello <span class="span1">world</span> pale blue dot<span class="span2">.</span></h1>
+                <h2 class="titular">Hello <span class="span1">world</span> pale blue dot<span class="span2">.</span></h2>
                 <p>Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.
                 </p>
             </article>
-            <button class="masinfo"><a href="#secnosotros">CONOCÉ MÁS</a></button>
+            <button class="masinfo">CONOCÉ MÁS</button>
+            <!-- linkear con el botón dentro de la pág -->
         </section>
 
         <!-- 2º sección -->
@@ -119,7 +120,8 @@
             <div class="tsec6">
                 <h2>¿Querés las últimas novedades?</h2>
             </div>
-            <button class="masepisodios"><a href="#secepisodios">ESCUCHÁ LOS EPISODIOS</a></button>
+            <button class="masepisodios">ESCUCHÁ LOS EPISODIOS</button> 
+            <!-- linkear con el botón dentro de la pág -->
         </section>
 
     </main>
