--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
 
         <!-- 1º sección -->
         <section class="conocemas">
-            <article class="presentacion">
-                <h2 class="titular">Hello <span class="span1">world</span> pale blue dot<span class="span2">.</span></h2>
-                <p>Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.
-                </p>
-            </article>
-            <button class="masinfo">CONOCÉ MÁS</button>
-            <!-- linkear con el botón dentro de la pág -->
+            <h2 class="titular">Hello <span class="span1">world</span> pale blue dot<span class="span2">.</span>
+            </h2>
+            <p>Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.
+            </p>
+            <span class="masinfo"><a href="#secnosotros">CONOCÉ MÁS</a></span>
         </section>
 
         <!-- 2º sección -->
@@ -48,30 +46,30 @@
                 <h2 id="secepisodios">Episodios</h2>
             </div>
             <div class="spotify">
-                <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" width="100%"
-                    height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" width="100%"
-                    height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" width="100%"
-                    height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" width="100%"
-                    height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" height="232"
+                    allow="encrypted-media"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" height="232"
+                    allow="encrypted-media"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" height="232"
+                    allow="encrypted-media"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" height="232"
+                    allow="encrypted-media"></iframe>
             </div>
         </section>
 
         <!-- 3º sección -->
-        <section class="historia">
+        <div class="historia">
             <div class="phone" id="secnosotros">
                 <img src="./imagenes/phone.png" alt="The Secret History of Women in Coding">
             </div>
-            <article class="artsec3">
+            <div class="artsec3">
                 <h2>De dónde venimos</h2>
                 <p>Our posturings, our imagined self-importance, the delusion that we have some privileged position in
                     the Universe, are challenged by this point of pale light.</p>
                 <p>Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this
                     astness, there is no hint that help will come from elsewhere to save us from ourselves.</p>
-            </article>
-        </section>
+                </div>
+        </div>
 
         <!-- 4º sección -->
         <section class="invitados">
@@ -120,8 +118,7 @@
             <div class="tsec6">
                 <h2>¿Querés las últimas novedades?</h2>
             </div>
-            <button class="masepisodios">ESCUCHÁ LOS EPISODIOS</button> 
-            <!-- linkear con el botón dentro de la pág -->
+            <span class="masepisodios"><a href="#secepisodios">ESCUCHÁ LOS EPISODIOS</a></span>
         </section>
 
     </main>
@@ -132,8 +129,8 @@
             <p>© 2019— Hello blue pale dot</p>
         </div>
         <div class="redes">
-            <a href="https://www.spotify.com/us/"><i class="fab fa-spotify"></i></a> 
-            <a href="https://www.instagram.com/?hl=es"><i class="fab fa-instagram"></i></a> 
+            <a href="https://www.spotify.com/us/"><i class="fab fa-spotify"></i></a>
+            <a href="https://www.instagram.com/?hl=es"><i class="fab fa-instagram"></i></a>
             <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
             <a href="https://es-la.facebook.com/"><i class="fab fa-facebook"></i></a>
             <!--no es el mismo ícono que decargo, se pide circular y coloca cuadrado-->
