links redes pestaña en blanco

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
             <p>© 2019— Hello blue pale dot</p>
         </div>
         <div class="redes">
-            <a href="https://www.spotify.com/us/"><i class="fab fa-spotify"></i></a>
-            <a href="https://www.instagram.com/?hl=es"><i class="fab fa-instagram"></i></a>
-            <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-            <a href="https://es-la.facebook.com/"><i class="fab fa-facebook"></i></a>
-            <a href="https://telegram.org/"><i class="fab fa-telegram"></i></a>
+            <a href="https://www.spotify.com/us/" target="_blank"><i class="fab fa-spotify"></i></a>
+            <a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://telegram.org/" target="_blank"><i class="fab fa-telegram"></i></a>
         </div>
     </footer>
 </body>
